force-app/main/default/objects/Shipment__c/fields/ETA_Date__c.field-meta.xml
<CustomField>
    <fullName>ETA_Date__c</fullName>
    <label>ETA Date</label>
    <type>Date</type>
</CustomField>