force-app/main/default/objects/Shipment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Offer Request</fullName>
            </value>
            <value>
                <fullName>Booking Confirmed with Carrier</fullName>
            </value>
            <value>
                <fullName>Closings</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>